<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

	<com.google.android.material.card.MaterialCardView
			android:id="@+id/mainLinStatus"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="5dp"
			android:elevation="0dp"
			app:cardElevation="0dp"
			app:strokeWidth="0dp">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:elevation="0dp"
				android:gravity="center">

			<androidx.constraintlayout.utils.widget.ImageFilterView
					android:id="@+id/main_img_status"
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_marginStart="25dp"
					android:layout_marginEnd="5dp"
					android:src="@mipmap/ic_warn"
					android:tint="@color/colorText" />

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingLeft="20dp"
					android:paddingTop="10dp"
					android:paddingRight="20dp"
					android:paddingBottom="10dp">

				<TextView
						android:id="@+id/main_text_status"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="5dp"
						android:ellipsize="end"
						android:singleLine="true"
						android:text="@string/module_not_activated"
						android:textColor="@color/colorText"
						android:textSize="18sp" />

				<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="5dp"
						android:gravity="center|start"
						android:orientation="horizontal">

					<TextView
							android:id="@+id/main_text_version"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:alpha="0.8"
							android:ellipsize="end"
							android:singleLine="true"
							android:text="@string/module_version"
							android:textColor="@color/colorText"
							android:textSize="13sp" />

				</LinearLayout>


				<com.google.android.material.textview.MaterialTextView
						android:id="@+id/main_text_api_way"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5dp"
						android:alpha="0.6"
						android:ellipsize="end"
						android:singleLine="true"
						android:textColor="@color/white"
						android:textSize="11sp"
						android:visibility="gone" />
			</LinearLayout>
		</LinearLayout>

	</com.google.android.material.card.MaterialCardView>

	<com.google.android.material.card.MaterialCardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="15dp"
			android:gravity="center"
			app:cardBackgroundColor="?attr/colorSecondary"
			app:strokeWidth="0dp"
			android:visibility="gone">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:paddingLeft="15dp"
				android:paddingTop="15dp"
				android:paddingRight="15dp"
				android:paddingBottom="15dp">

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center|start">

				<ImageView
						android:layout_width="15dp"
						android:layout_height="15dp"
						android:layout_marginEnd="10dp"
						android:src="@mipmap/ic_home" />

				<com.google.android.material.textview.MaterialTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:alpha="0.85"
						android:singleLine="true"
						android:text="@string/display_settings"
						android:textColor="@color/colorText"
						android:textSize="12sp" />
			</LinearLayout>

			<com.google.android.material.materialswitch.MaterialSwitch
					android:id="@+id/hide_icon_in_launcher_switch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/hide_app_icon_on_launcher"
					android:textAllCaps="false"
					android:textColor="@color/colorText"
					android:textSize="18sp" />

			<com.google.android.material.textview.MaterialTextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:alpha="0.6"
					android:lineSpacingExtra="6dp"
					android:text="@string/hide_app_icon_on_launcher_tip"
					android:textColor="@color/colorText"
					android:textSize="12sp" />

			<com.google.android.material.card.MaterialCardView
					style="@style/Widget.Material3.CardView.Filled"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:cardBackgroundColor="?attr/colorErrorContainer"
					app:cardCornerRadius="8dp">

				<com.google.android.material.textview.MaterialTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:maxLines="2"
						android:padding="10dp"
						android:text="@string/hide_app_icon_on_launcher_notice"
						android:textColor="?attr/colorOnErrorContainer"
						android:textSize="12sp">

				</com.google.android.material.textview.MaterialTextView>
			</com.google.android.material.card.MaterialCardView>
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</LinearLayout>